--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
-  "require": {
-    
-  }
+  "autoload": {
+    "psr-0": {"AKlump\\": "src/"}  
+  },
+  "require-dev": {
+    "phpunit/phpunit": "3.7.*"
+  }  
 }
