core update added stuff.

--- a/docs/source/help.ini
+++ b/docs/source/help.ini
@@ -16,6 +16,12 @@ title = 'Features'
 [todo]
 title = "Todos"
 
+[headers]
+title = "Headers"
+
+[available_headers]
+title = "List of Header Keys"
+
 [flags]
 title = "Flags"
 
