Renamed priority list to priorities. Added 'id' flag.

--- a/docs/source/help.ini
+++ b/docs/source/help.ini
@@ -25,8 +25,8 @@ title = "List of Header Keys"
 [flags]
 title = "Flags"
 
-[priority_list]
-title = 'Priority Lists'
+[priorities]
+title = 'Priorities'
 
 [estimate]
 title = "Estimating Time"
